--- a/app/package.json
+++ b/app/package.json
@@ -57,21 +57,21 @@
     "@types/jasmine": "3.3.8",
     "@types/node": "10.12.21",
     "codelyzer": "4.5.0",
+    "gulp": "4.0.0",
+    "gulp-cordova-create": "2.0.1",
+    "gulp-cordova-version": "0.3.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
+    "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
     "protractor": "5.4.2",
     "sw-precache": "5.2.1",
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
-    "typescript": "3.2.4",
-    "gulp": "4.0.0",
-    "gulp-cordova-create": "2.0.1",
-    "gulp-cordova-version": "0.3.0"
+    "typescript": "3.2.4"
   }
 }
