Added 3 tabs including landing tab (Balance)

--- a/app/src/constants/app.const.json
+++ b/app/src/constants/app.const.json
@@ -1,5 +1,6 @@
 {
-  "dataSource": {
-
-  }
+    "dataSource": {
+        "register": "neutrinos-delivery-rt",
+        "login": "neutrinos-delivery-rt"
+    }
 }
