--- a/app/package.json
+++ b/app/package.json
@@ -49,7 +49,9 @@
     "signature_pad": "2.3.2",
     "neutrinos-module": "0.0.38",
     "localforage": "1.7.3",
-    "rxjs-compat": "6.4.0"
+    "rxjs-compat": "6.4.0",
+    "cordova-android": "7.1.4",
+    "cordova-ios": "4.5.4"
   },
   "devDependencies": {
     "@angular/cli": "7.3.0",
@@ -73,5 +75,11 @@
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
     "typescript": "3.2.4"
+  },
+  "cordova": {
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
