Added a claim page

--- a/app/src/constants/app.const.json
+++ b/app/src/constants/app.const.json
@@ -1,6 +1,7 @@
 {
     "dataSource": {
         "register": "neutrinos-delivery-rt",
-        "login": "neutrinos-delivery-rt"
+        "login": "neutrinos-delivery-rt",
+        "claim": "neutrinos-delivery-rt"
     }
 }
